--- a/allocation_app/allocation_app/templates/allocation_app/input_preferences.html
+++ b/allocation_app/allocation_app/templates/allocation_app/input_preferences.html
@@ -1,16 +1,13 @@
-<!-- allocation_app/templates/allocation_app/input_preferences.html -->
-
 {% extends 'allocation_app/base.html' %}
 {% block title %}Input Preferences - Allocation App{% endblock %}
 
 {% block sidebar %}
-    <!-- Optionally, include a summary of selected parameters or navigation links -->
     <h2>Summary</h2>
     <p><strong>Algorithm:</strong> {{ algorithm }}</p>
     <p><strong>Agents:</strong> {{ agents|length }}</p>
     <p><strong>Items:</strong> {{ items|length }}</p>
     <p>
-        <button href="{% url 'selections' %}">Return to Parameter Selection</button>
+        <a href="{% url 'selections' %}" class="button-link">Change Parameters</a>
     </p>
 {% endblock sidebar %}
 
@@ -18,29 +15,32 @@
 <h1>Input Preferences</h1>
 <form method="post" id="preferences-form">
     {% csrf_token %}
-    <table>
-        <thead>
-            <tr>
-                <th>Item / Agent</th>
-                {% for agent in agents %}
-                    <th>{{ agent }}</th>
-                {% endfor %}
-            </tr>
-        </thead>
-        <tbody>
-            {% for item in items %}
+    <div class="table-responsive-horizontal">
+        <table>
+            <thead>
                 <tr>
-                    <td>{{ item }}</td>
-                    {% for agent in agents %}
-                        <td>
-                            <input type="number" name="preferences-{{ item }}-{{ agent }}" step="any" required>
-                        </td>
+                    <th> Agents / Items </th>
+                    {% for item in items %}
+                        <th>{{ item }}</th>
                     {% endfor %}
                 </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-    <button type="submit">Submit Preferences</button>
+            </thead>
+            {% load html_filters %}
+            <tbody>
+                {% for agent_index, agent in agents|get_enumerate %}
+                    <tr>
+                        <td>{{ agent }}</td>
+                        {% for item_index, item in items|get_enumerate %}
+                            <td>
+                                <input type="number" name="preferences-{{ item }}-{{ agent }}" step="any" required
+                                       value="{% if preferences %}{{ preferences|get_item:agent_index|get_item:item_index }}{% endif %}">
+                            </td>
+                        {% endfor %}
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+    <button type="submit" class="button-link">Submit Preferences</button>
 </form>
 {% endblock content %}
-
