--- a/allocation_app/allocation_app/templates/allocation_app/selections.html
+++ b/allocation_app/allocation_app/templates/allocation_app/selections.html
@@ -28,6 +28,6 @@
                 <span class="error-message" data-error="{{ num_form.num_items.errors|join:' ' }}"></span>
             {% endif %}
         </div>
-        <button type="submit">Next</button>
+        <button type="submit" class="button-link">Submit Preferences</button>
     </form>
 {% endblock sidebar %}
