--- a/allocation_app/allocation_app/static/styles/styles.css
+++ b/allocation_app/allocation_app/static/styles/styles.css
@@ -21,6 +21,7 @@ body {
     overflow: hidden;
     box-sizing: border-box;
 }
+/* Header Styles */
 
 header {
     text-align: center;
@@ -33,6 +34,15 @@ header h1 {
     margin: 0;
     font-size: 2.5em;
     font-weight: 300;
+}
+
+header h1 a {
+    color: #fff;
+    text-decoration: none;
+}
+
+header h1 a:hover {
+    text-decoration: none;
 }
 
 .main-content {
@@ -98,6 +108,78 @@ header h1 {
 .sidebar .form-group {
     margin-bottom: 15px;
 }
+
+/* Navigation Bar Styles */
+.navbar {
+    overflow: hidden;
+    background-color: #4a90e2;
+    font-family: Arial, sans-serif;
+}
+
+.navbar ul {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #4a90e2;
+}
+
+.navbar li {
+    float: left;
+}
+
+.navbar li a, .navbar .dropbtn {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 20px;
+    text-decoration: none;
+}
+
+
+.navbar li a:hover, .navbar .dropdown:hover .dropbtn {
+    background-color: #575757;
+}
+
+.navbar li.dropdown {
+    display: inline-block;
+}
+
+.navbar .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.navbar .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.navbar .dropdown-content a:hover {
+    background-color: #f1f1f1;
+}
+
+.navbar .dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropbtn {
+    border-bottom: 3px solid  #4a90e2;
+}
+
+/* Clear floats after the navigation bar
+.dropbtn::after {
+    content: 'v';
+    color: red;
+    padding-left: 5px;
+} 
+
 
 /* Form Styles */
 form {
