--- a/allocation_app/allocation_app/templates/allocation_app/algorithm_detail.html
+++ b/allocation_app/allocation_app/templates/allocation_app/algorithm_detail.html
@@ -24,7 +24,7 @@
             tex: {
                 inlineMath: [['\\(','\\)']],
                 displayMath: [['\\[','\\]']],
-                packages: {'[+]': ['ams']},    // Include the 'ams' package
+                packages: {'[+]': ['ams']},    
             }
         };
     </script>
